Pipeline seems to work in a notebook begin transfering pipeline to py files

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -91,10 +91,10 @@
    "source": [
     "chunker = Chunker(max_len=200)\n",
     "chunker.split_text_into_chunks(processed)\n",
-    "chunks = chunker.get_test_batch(10, 0)\n",
+    "n_chunks = chunker.get_test_batch(10, 0)\n",
     "# chunks = chunker.chunks\n",
-    "chunker.save_chunks_as_text(output_file + \".md\", chunks)\n",
-    "print(\"text chunks:\", [len(ch) for ch in chunks])"
+    "chunker.save_chunks_as_text(output_file + \".md\", n_chunks)\n",
+    "print(\"text chunks:\", [len(ch) for ch in n_chunks])"
    ]
   },
   {
@@ -127,7 +127,7 @@
     "import pandas as pd \n",
     "import torch\n",
     "\n",
-    "from pyspark.sql import SparkSession, Window\n",
+    "from pyspark.sql import SparkSession, Window, \n",
     "from pyspark.sql.functions import pandas_udf, PandasUDFType, udf, col, lit, desc, floor\n",
     "from pyspark.sql.functions import collect_list, flatten\n",
     "from pyspark.sql import functions as F\n",
@@ -231,7 +231,8 @@
     "\n",
     "print(f\"Spark version: {spark.version}\")\n",
     "print(f\"Using {cpus_limit} CPU cores for inference.\")\n",
-    "\n"
+    "\n",
+    "spark.sparkContext"
    ]
   },
   {
@@ -415,12 +416,171 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f22705b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "sc = spark.sparkContext\n",
+    "\n",
+    "sc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34d4d80d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "input_file = \"data/arXiv-2106.04624v1/main.tex\"\n",
+    "\n",
+    "ut = sc.textFile(input_file,  )\n",
+    "ut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71aeb3ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_text(file_content):\n",
+    "    parser = LatexParser()\n",
+    "    processed_text = parser.custom_latex_to_text(file_content)   \n",
+    "\n",
+    "    return processed_text, parser.tables, parser.figures\n",
+    "    # return { \"text\": processed_text, \n",
+    "    #         \"tables\": parser.tables, \n",
+    "    #         \"figures\": parser.figures } \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a7b7187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = sc.wholeTextFiles(input_file)\n",
+    "\n",
+    "processed_rdd = df.mapValues(preprocess_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "815313c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert RDD to DataFrame\n",
+    "from pyspark.sql import Row\n",
+    "\n",
+    "df_processed = processed_rdd.map(lambda x: Row(filename=x[0], \n",
+    "                                               text=x[1][0], \n",
+    "                                               tables=x[1][1], \n",
+    "                                               figures=x[1][2])).toDF()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ed69571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wat = df_processed.first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9595484a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wat.figures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19b7a0bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@udf(ArrayType(StringType()))\n",
+    "def udf_split_text(text, chunk_size=500, test =False):\n",
+    "    from ArticleReader.Chunker import Chunker\n",
+    "    chunker = Chunker(max_len=chunk_size)\n",
+    "    chunker.split_text_into_chunks(text)\n",
+    "    if test:\n",
+    "        n_chunks = 15\n",
+    "        start = 295\n",
+    "        return chunker.get_chunks()[start : start + n_chunks]\n",
+    "    else: \n",
+    "        return chunker.get_chunks()\n",
+    "    \n",
+    "\n",
+    "df_chunks = df_processed.withColumn(\"chunks\", udf_split_text(df_processed[\"text\"]),)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8234b24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_chunks.first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01bcee1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final = df_chunks.selectExpr(\"filename\", \"explode(chunks) as sentence\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93513975",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import monotonically_increasing_id \n",
+    "\n",
+    "df2 = df_final.withColumn(\"index\", monotonically_increasing_id()) \\\n",
+    "    .selectExpr(\"*\",\" length(sentence) as text_len\").offset(295).limit(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f28c2c36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2f7e1e98",
    "metadata": {},
    "outputs": [],
    "source": [
     "# psp.from_pandas(\n",
-    "chunks = spark.createDataFrame(chunker.get_test_batch(15,295))"
+    "n_chunks = spark.createDataFrame(chunker.get_test_batch(15,295))"
    ]
   },
   {
@@ -437,7 +597,7 @@
     "\n",
     "text_volume_max  = 600 \n",
     "\n",
-    "step1 = chunks.withColumn('cum_text_volume', F.sum('text_len').over(text_volume_window)) \\\n",
+    "step1 = df2.withColumn('cum_text_volume', F.sum('text_len').over(text_volume_window)) \\\n",
     ".withColumn('part', floor(col('cum_text_volume')/lit(text_volume_max)) )\n",
     "step1"
    ]
@@ -652,7 +812,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "chunks = psp.from_pandas(chunker.get_test_batch(3,53))\n",
+    "n_chunks = psp.from_pandas(chunker.get_test_batch(3,53))\n",
     "#chunks = spark.from_pandas(chunker.chunks)"
    ]
   },
@@ -663,7 +823,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(chunks)"
+    "type(n_chunks)"
    ]
   },
   {
@@ -673,7 +833,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunks.head()"
+    "n_chunks.head()"
    ]
   },
   {
@@ -696,7 +856,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunks.count()"
+    "n_chunks.count()"
    ]
   },
   {
@@ -708,7 +868,7 @@
    "source": [
     "\n",
     "# Repartition the DataFrame to match the batch size\n",
-    "num_partitions = max(1, chunks.sentence.count() // batch_size)\n",
+    "num_partitions = max(1, n_chunks.sentence.count() // batch_size)\n",
     "num_partitions\n"
    ]
   },
@@ -790,7 +950,7 @@
    "outputs": [],
    "source": [
     "# Apply the UDF\n",
-    "step1 = chunks.to_spark().sort(\"text_len\", ascending=False ) \n",
+    "step1 = n_chunks.to_spark().sort(\"text_len\", ascending=False ) \n",
     "step1.show()"
    ]
   },
